--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.9'
 services:
   httpd:
     container_name: httpd
-    image: thammarach/apache_docker:2.4.41-alpine
-#   image: httpd:2.4.41-alpine
+    #image: thammarach/apache_docker:2.4.41-alpine
+    image: httpd:2.4.41-alpine
     volumes:
       - ./html:/usr/local/apache2/htdocs/
     ports:
